# SeayDzend-R

./: .gitignore  Cargo.toml  README.md
lib/: config.ini
lib/Compare/Compare/: BC3Key.txt  BCCommands.xml  BCSessions.xml  BCSessions.xml.bak  BCState.xml  BCState.xml.bak  BCompare.chm  BCompare.tr  License.html  Readme.txt
lib/Compare/Compare/Helpers/: XLS_to_TAB_Single.vbs
lib/Compare/TextDiff/: TextDiff.hlp  TextDiff.ini
lib/bin2/: php.ini
lib/bin3/: Decompiler.class.php  _inc.php  php.ini
lib/rm/: php.ini
src/: main.rs
